# C-PL-Project-1-2048

./: 8192.c  CMakeLists.txt  README.md  Sakiyary_2048.c  Sakiyary_2048.h
IMAGE/MakeImage/: MakeImage.pptx  MakeImage.psd  MakeNote.psd  MsgBox.psd
